Import image & fix typo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	  		"vers le site officiel de BugDroid"
 	  		Je découvre ►
 
-	    	Petite démo réalisée dans le cadre de la journée immersion le 8 mai 2014
+	    	Petite démo réalisée dans le cadre de la journée immersion.
 
 	</body>
 </html>
